# SparkFM

./: .env.example  .gitignore  SPEC.md  pyproject.toml
data/: community_artists.json  regions.json
src/: api.py  claude_client.py  cli.py  community.py  location.py  renderer.py  spotify_client.py  tidal_client.py
src/candidates/: musicbrainz.py  pool.py  spotify_graph.py
static/: index.html  manifest.json
templates/: spark_card.html.j2
tests/fixtures/: atlanta_hiphop.json  boston_rnb.json  vermont_indie.json
